--- a/index.html
+++ b/index.html
@@ -84,26 +84,22 @@
     <div class="order">
       <div class="order-inner">
 
-        <h6><a href="#pl"id="x">X close</a></h6>
+
         <div class="container-fluid">
+          <h6><a href="#pl"id="x">X close</a></h6>
           <div class="row">
+
             <div class="col-md-6 order-img">
 
             </div>
+
               <div class="col-md-6 form-input">
+
                 <h2>Order</h2>
                 <form class="order-form-vis" action="https://formspree.io/mvowkdyg" method="post">
                   <input type="text" class="order-field" name="Email Address" value="" placeholder="Email">
                   <input type="text" class="order-field"name="Company" value="" placeholder="Company">
                   <input type="text" class="order-field"name="Customer Name" value="" placeholder="Name">
-                  <br>
-                  <br>
-                  <div class="order-add">
-
-                  </div>
-                  <a href="#pl"onclick="addField()"class="btn1">Add an item</a>
-                  <br>
-                  <br>
                 <input type="text" class="order-field" name="Purchase order #" value="" placeholder="P/O#">
                 <input type="text" class="order-field" name="Job Name" value="" placeholder="Job Name">
                 <input type="text" class="order-field" name="Account number" value="" placeholder="Account Number" id="customer"disabled>
@@ -117,6 +113,14 @@
                   <option value="Customer_account">Will Call</option>
                   <option value="Guest">Delivery</option>
                 </select>
+                <br>
+                <br>
+                <div class="order-add">
+
+                </div>
+                <a href="#pl"onclick="addField()"class="btn1">Add an item</a>
+                <br>
+                <br>
                 <label>
                  Upload an attachment:
                  <input type="file" name="upload">
@@ -179,7 +183,7 @@
                 <hr>
             </div>
             <div class="card-par">
-              <li><strong>Full-line stocking distributor</strong> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
+              <li><strong style="color: #F5D547">Full-line stocking distributor</strong> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices. </li>
             </div>
           </div>
         </div>
@@ -192,7 +196,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Long-term inside and outside sales</strong> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
+              <li><strong style="color: #F5D547">Long-term inside and outside sales</strong> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution. </li>
             </div>
           </div>
         </div>
@@ -205,7 +209,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Experienced personnel</strong> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
+              <li><strong style="color: #F5D547">Experienced personnel</strong> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing. </li>
             </div>
           </div>
         </div>
@@ -218,7 +222,7 @@
               <hr>
             </div>
             <div class="card-par">
-              <li><strong>Long-term trading relationships</strong> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
+              <li><strong style="color: #F5D547">Long-term trading relationships</strong> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources. </li>
             </div>
         </div>
       </div>
