changes to stuff

--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
           </div>
         </div>
         <!-- Visit us -->
-        <div class="col-lg-4 text-center bottom"id=majax>
+
+        <div class="col-lg-4 text-center bottom">
           <h1>Visit Us</h1>
             <i class="fas fa-store"aria-hidden="true"></i> <h5>Main Office</h5>
             1310 S 51st St Richmond, CA, 94804
@@ -395,6 +396,7 @@
             <i class="fa fa-map-marker"></i>
             <a class="map-link"onclick=loadDoc2()>Map</a>
         </div>
+
         <!-- Contact form -->
         <div class="col-lg-4 text-center bottom">
           <div class="contact">
@@ -409,6 +411,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id=majax>
+
     </div>
     </div>
     <!-- Footer -->
