--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
         <h3>News & Media</h3>
         <div class="news_over">
           <div class="article">
+
             <h4>Caltrans Exceeds Small Business Goals</h4>
+            <img src="imgs/first.jpg" alt=""width=60px>
             <p>Caltrans put more small, disadvantaged and disabled-veteran businesses to work in 2019 than ever before in its history.. <br>Spring 2020</p>
             <a href="https://dot.ca.gov/programs/public-affairs/mile-marker/spring-2020/disadvantaged-business">more..</a>
             <hr>
@@ -246,6 +248,7 @@
 
           <div class="article">
             <h4>Representing Diversity</h4>
+            <img src="imgs/second.jpg" alt=""width=60px>
             <p>Caltrans is spotlighting Disadvantaged Business Enterprise: Laner Electric Supply Co., Inc. during Pride Month.. <br>6/16/2020</p>
             <a href="https://dot.ca.gov/-/media/dot-media/programs/civil-rights/documents/success-stories/lgbt-represnting-diversity-a11y.pdf">more..</a>
             <hr>
