--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="scroll blur">
       <div class="title">
         <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""> </a>
-        <h1 id="laner_electric">Laner Electric Supply</h1>
+        <h1 data-aos="fade-left"id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
-        <h3 id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
+        <h3 data-aos="fade-right"id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
         <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x fic" aria-hidden="true"></a></div>
       </div>
 
@@ -162,14 +162,17 @@
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
 
 
 
     <!-- Third Page/Section, affils + certs + projs-->
     <div class="scroll2 blur"></div>
-    <div class="about-us big"id="about">
+    <div id="about">
+
+      </div>
+    <div class="about-us big">
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid big">
@@ -253,15 +256,18 @@
             <a href="https://dot.ca.gov/-/media/dot-media/programs/civil-rights/documents/success-stories/lgbt-represnting-diversity-a11y.pdf">more..</a>
             <hr>
           </div>
+          <div id="projects">
 
+          </div>
 
         </div>
-      </div>
+      </div >
     </div>
+
     </div>
 
     <!-- Projects sec -->
-    <div class="project-section"id="projects">
+    <div class="project-section">
       <h1>Projects</h1>
       <div class="container-fluid">
         <div class="row justify-content-center">
