--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
               Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="CAPABILITY STATEMENT.pdf"download="cs.pdf">Capabilities</a>
+              <a class="dropdown-item" href="Capability Statement 2020.pdf"download="cs.pdf">Capabilities</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
               <a class="dropdown-item disabled" href="#">Line Card</a>
             </div>
           </li>
-          <a class="nav-item mobl">Call / Text (510) 215-5100</a>
+          <a href="tel:510-215-5100"class="nav-item mobl">Call / Text (510) 215-5100</a>
           <!-- END NAV DROPDOWN -->
 
         </div>
       </div>
-        <a class="navbar-right">Call / Text (510) 215-5100</a>
+        <a href="tel:510-215-5100"class="navbar-right">Call / Text (510) 215-5100</a>
     </nav>
 
 
@@ -384,7 +384,7 @@
               <br>
               <i>Serving quality driven builders since 1984</i>
               <hr>
-              <p><h6><a href="#0">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
+              <p><h6><a href="https://www.linkedin.com/company/laner-electric-supply/">LinkedIn</a> • <a href="#0">RSS</a></h6></p>
             </div>
           </div>
         </div>
