changes to project imgs

--- a/index.html
+++ b/index.html
@@ -267,49 +267,49 @@
     </div>
 
     <!-- Projects sec -->
-    <div class="project-section">
+    <div class="project-section"id="projects">
       <h1>Projects</h1>
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Resources.jpg" alt="">
             <h4>New Natural Resources HQ</h4>
             <p><strong>Sacramento, CA</strong> - Redwood Electric group & Turner Construction</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/SFMTA-2.jpg" alt="">
             <h4>SFMTA Phase 2</h4>
             <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Transbay.jpg" alt="">
             <h4>Transbay Transit Center</h4>
             <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Mission.jpg" alt="">
             <h4>706 Mission Project</h4>
             <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+        <div data-aos="flip-left"class="row justify-content-center">
+          <div class="col-md-2 project-card">
+            <img src="projects/Nellis.jpg" alt="">
             <h4>Nellis Air Force Base</h4>
             <p><strong>Las Vegas, NV</strong> - Nova Group</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Travis.jpg" alt="">
             <h4>Travis Air Force Base</h4>
             <p><strong>Fairfield, CA</strong> - Nova Group</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Bayview.jpg" alt="">
             <h4>Bayview Opera House, Ruth Williams Memorial Theatre</h4>
             <p><strong>San Francisco, CA</strong> - Woo Electric</p>
           </div>
           <div data-aos="flip-left"class="col-md-2 project-card">
-            <img src="projects/Proj1.jpg" alt="">
+            <img src="projects/Genentech.jpg" alt="">
             <h4>UCSF Genentech Hall</h4>
             <p><strong>San Francisco, CA</strong> - Woo Electric</p>
           </div>
