--- a/index.html
+++ b/index.html
@@ -236,7 +236,27 @@
     <div class="row justify-content-center">
       <div class="col-md-4 xtr">
         <h3>Corporate Social Responsibility</h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <p id=resp>
+
+        <em>
+
+          Laner Electric Supply CEO
+          Sandra Escalante
+        currently sits on 5 different boards focused on
+        benefitting multiple aspects of our community:</em>
+        <br>
+        University of CA - UC Procurement
+        <br>
+        CalTrans -Statewide
+        <br>
+        BART -Business Advisory Council
+        <br>
+        Department of General Services- Small Business Advisory Council
+        <br>
+        Richmond Workforce
+        <br>
+        <img src="imgs/second.jpg" alt=""width=100px>
+      </p>
       </div>
       <div class="col-md-4 xtr">
         <h3>News & Media</h3>
