--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
               <a class="dropdown-item" href="Capability Statement 2020.pdf"download="cs.pdf">Capabilities</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
-              <a class="dropdown-item disabled" href="#">Line Card</a>
             </div>
           </li>
           <a href="tel:510-215-5100"class="nav-item mobl">Call / Text (510) 215-5100</a>
@@ -87,11 +86,11 @@
 
 
         <div class="container-fluid">
-          <h6><a href="#pl"id="x">X close</a></h6>
+
           <div class="row">
 
             <div class="col-md-6 order-img">
-
+              <h5><a href="#pl"id="x">X close</a></h5>
             </div>
 
               <div class="col-md-6 form-input">
@@ -129,6 +128,7 @@
 
                 <button type="submit" class="btn1"name="button">Submit</button>
               </form>
+
               </div>
           </div>
         </div>
@@ -255,7 +255,7 @@
         <br>
         Richmond Workforce
         <br>
-        <img src="imgs/second.jpg" alt=""width=100px>
+        <img src="imgs/san.jpg" alt=""width=100px>
       </p>
       </div>
       <div class="col-md-4 xtr">
