--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="covid">
       <div class="inner-cv nmob">
-        <h4>Due to the ongoing Corona Virus pandemic,</h4>
+        <h4>Due to the ongoing Coronavirus pandemic,</h4>
         Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.
         <ul>
           <li>Masks or face shields are required.</li>
@@ -36,7 +36,7 @@
         <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""> </a>
         <h1 data-aos="fade-left"id="laner_electric">Laner Electric Supply</h1>
         <!--<img id="logo" src="imgs/Laner.png" alt="">-->
-        <h3 data-aos="fade-right"id ="slogan">SERVING QUALITY DRIVEN BULDERS SINCE 1984</h3>
+        <h3 data-aos="fade-right"id ="slogan">SERVING QUALITY DRIVEN BUILDERS SINCE 1984</h3>
         <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x fic" aria-hidden="true"></a></div>
       </div>
 
@@ -52,7 +52,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#two">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#about">About</a>
+          <a class="nav-item nav-link" href='#abo'onclick="about()">About</a>
           <a class="nav-item nav-link" href="#projects">Projects</a>
 
           <!-- NAV DROPDOWN -->
@@ -103,7 +103,6 @@
                   <input type="text" class="order-field"name="Customer Name" value="" placeholder="Name">
                 <input type="text" class="order-field" name="Purchase order #" value="" placeholder="P/O#">
                 <input type="text" class="order-field" name="Job Name" value="" placeholder="Job Name">
-                <input type="text" class="order-field" name="Account number" value="" placeholder="Account Number" id="customer"disabled>
                 <select name="Customer Type" id="select_field" onchange="customerSelect()" required>
                   <option value="select a value" disabled selected>Please Select</option>
                   <option value="Customer_account">Customer Account</option>
@@ -126,7 +125,6 @@
                  Upload an attachment:
                  <input type="file" name="upload">
                </label>
-
                 <button type="submit" class="btn1"name="button">Submit</button>
               </form>
 
@@ -139,7 +137,7 @@
     <!-- First intro sec + order + login -->
     <div class="container sec1 blur">
       <div class="row blur">
-        <div data-aos="fade-up"class="col-md-6 col-centered est">
+        <div data-aos="fade-up"class="col-lg-6 col-centered est">
           <h3>Established in 1984,</h3>
           Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
@@ -150,7 +148,7 @@
             </form>
           </div>
         </div>
-        <div data-aos="fade-up" class="col-md-6 col-centered">
+        <div data-aos="fade-up" class="col-lg-6 col-centered">
           <div class="login">
             <h1 id="ext">Extranet Login</h1>
             <form class="" action="#" method="post">
@@ -248,11 +246,11 @@
         <br>
         University of CA - UC Procurement
         <br>
-        CalTrans -Statewide
+        CalTrans - Statewide
         <br>
-        BART -Business Advisory Council
+        BART - Business Advisory Council
         <br>
-        Department of General Services- Small Business Advisory Council
+        Department of General Services - Small Business Advisory Council
         <br>
         Richmond Workforce
         <br>
@@ -296,7 +294,7 @@
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <img src="projects/Resources.jpg" alt="">
             <h4>New Natural Resources HQ</h4>
-            <p><strong>Sacramento, CA</strong> - Redwood Electric group & Turner Construction</p>
+            <p><strong>Sacramento, CA</strong> - Redwood Electric Group & Turner Construction</p>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <img src="projects/SFMTA-2.jpg" alt="">
@@ -385,7 +383,7 @@
             <h1>Join our mailing list!</h1>
             <form class="news" action="index.html" method="post">
               <input type="text" name="" value=""placeholder="Name">
-              <input type="email" name="" value=""placeholder="E-mail">
+              <input type="email" name="" value=""placeholder="Email">
               <input type="button" name="" class="btn" value="Sign me up!">
             </form>
           </div>
@@ -421,7 +419,7 @@
             (510) 215-5100 <br>
             <i class="fa fa-clock-o" aria-hidden="true"></i>
             <h5>Hours</h5>
-            Mon-Fri, 7am-4:30pm
+            Mon-Fri 7:00am - 4:30pm
             <br>
             <i class="fa fa-map-marker"></i>
             <a class="map-link"onclick=loadDoc2()>Map</a>
