layout changes, text styles

--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
   <body>
     <div class="covid">
       <div class="inner-cv nmob">
-        <h4>Due to the ongoing Coronavirus pandemic,</h4>
-        Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.
-        <ul>
-          <li>Masks or face shields are required.</li>
-          <li>Markers have been placed to encourage social distancing.</li>
-          <li>Limited access to showroom with a maximum of three customers at a time. Office visits
-          available with appointment only.</li>
-          <li>Will Call pickup available.</li>
-          <li>Orders can be placed over the phone, via email and by texting our landline (510) 215-5100</li>
-          <li>Modified Hours of Operation:</li>
-          <li>Monday thru Friday: 7AM-3PM</li>
-        </ul>
-        We thank you for your cooperation and understanding during these uncertain times.
-        <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
+
+        <div class=covp>
+                  <h4>Due to the ongoing Coronavirus pandemic,</h4>
+                <em>Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.</em>
+                <ul>
+                  <li>Masks or face shields are required.</li>
+                  <li>Markers have been placed to encourage social distancing.</li>
+                  <li>Limited access to showroom with a maximum of three customers at a time. Office visits
+                  available with appointment only.</li>
+                  <li>Will Call pickup available.</li>
+                  <li>Orders can be placed over the phone, <br>via email and by texting our landline (510) 215-5100</li>
+                  <li>Modified Hours of Operation:</li>
+                  <li>Monday thru Friday: 7AM-3PM</li>
+                </ul>
+                We thank you for your cooperation and understanding during these uncertain times.
+                <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
+
+              </div>
       </div>
     </div>
     <!-- First Page + Title -->
@@ -235,26 +239,34 @@
     <div class="row justify-content-center">
       <div class="col-md-4 xtr">
         <h3>Corporate Social Responsibility</h3>
+
         <p id=resp>
-
-        <em>
-
-          Laner Electric Supply CEO
-          Sandra Escalante
+          <strong>Laner Electric Supply CEO
+          Sandra Escalante</strong>
         currently sits on 5 different boards focused on
-        benefitting multiple aspects of our community:</em>
+        benefitting multiple aspects of our community:
+        <img src="imgs/san.jpg" alt="">
         <br>
-        University of CA - UC Procurement
         <br>
-        CalTrans - Statewide
+
+        <em>University of CA - UC Procurement</em>
         <br>
-        BART - Business Advisory Council
         <br>
-        Department of General Services - Small Business Advisory Council
+
+        <em>CalTrans - Statewide</em>
         <br>
-        Richmond Workforce
         <br>
-        <img src="imgs/san.jpg" alt=""width=100px>
+
+        <em>BART - Business Advisory Council</em>
+        <br>
+        <br>
+        <em>Department of General Services - Small Business Advisory Council</em>
+        <br>
+        <br>
+        <em>Richmond Workforce</em>
+        <br>
+        <br>
+
       </p>
       </div>
       <div class="col-md-4 xtr">
@@ -292,45 +304,62 @@
       <div class="container">
         <div class="row justify-content-center">
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <img src="projects/Resources.jpg" alt="">
             <h4>New Natural Resources HQ</h4>
-            <p><strong>Sacramento, CA</strong> - Redwood Electric Group & Turner Construction</p>
+            <img src="projects/Resources.jpg" alt="">
+            <div class="over">
+              <p><strong>Sacramento, CA</strong> - Redwood Electric Group & Turner Construction</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
+            <h4>SFMTA<br>Phase 2</h4>
             <img src="projects/SFMTA-2.jpg" alt="">
-            <h4>SFMTA Phase 2</h4>
-            <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
+            <div class="over">
+              <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <img src="projects/Transbay.jpg" alt="">
             <h4>Transbay Transit Center</h4>
-            <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
+            <img src="projects/Transbay.jpg" alt="">
+            <div class="over">
+              <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <img src="projects/Mission.jpg" alt="">
             <h4>706 Mission Project</h4>
-            <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
+            <img src="projects/Mission.jpg" alt="">
+            <div class="over">
+              <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
+            </div>
           </div>
 
           <div data-aos="flip-left"class="col-sm-2 project-card">
+              <h4>Nellis Air Force Base</h4>
             <img src="projects/Nellis.jpg" alt="">
-            <h4>Nellis Air Force Base</h4>
-            <p><strong>Las Vegas, NV</strong> - Nova Group</p>
+            <div class="over">
+              <p><strong>Las Vegas, NV</strong> - Nova Group</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <img src="projects/Travis.jpg" alt="">
             <h4>Travis Air Force Base</h4>
-            <p><strong>Fairfield, CA</strong> - Nova Group</p>
+            <img src="projects/Travis.jpg" alt="">
+            <div class="over">
+              <p><strong>Fairfield, CA</strong> - Nova Group</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
+            <h4 title="Bayview Opera House, Ruth Williams Memorial Theatre">Bayview Opera House</h4>
             <img src="projects/Bayview.jpg" alt="">
-            <h4>Bayview Opera House, Ruth Williams Memorial Theatre</h4>
-            <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+            <div class="over">
+              <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+            </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <img src="projects/Genentech.jpg" alt="">
             <h4>UCSF Genentech Hall</h4>
+
+            <img src="projects/Genentech.jpg" alt="">
+            <div class="over">
             <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+            </div>
           </div>
         </div>
       </div>
