--- a/index.html
+++ b/index.html
@@ -301,34 +301,34 @@
     <!-- Projects sec -->
     <div class="project-section"id="projects">
       <h1>Projects</h1>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row justify-content-center">
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <h4>New Natural Resources HQ</h4>
+            <h4>New Natural Resources</h4>
             <img src="projects/Resources.jpg" alt="">
             <div class="over">
-              <p><strong>Sacramento, CA</strong> - Redwood Electric Group & Turner Construction</p>
+              <p><strong>Sacramento, CA</strong> <br> Redwood Electric Group & Turner Construction</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <h4>SFMTA<br>Phase 2</h4>
+            <h4>SFMTA Phase 2</h4>
             <img src="projects/SFMTA-2.jpg" alt="">
             <div class="over">
-              <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> - Fisk Electric</p>
+              <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4>Transbay Transit Center</h4>
             <img src="projects/Transbay.jpg" alt="">
             <div class="over">
-              <p><strong>San Francisco, CA</strong> - Fisk Electric</p>
+              <p><strong>San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4>706 Mission Project</h4>
             <img src="projects/Mission.jpg" alt="">
             <div class="over">
-              <p><strong>San Francisco, CA</strong> - Cupertino Electric</p>
+              <p><strong>San Francisco, CA</strong> <br> Cupertino Electric</p>
             </div>
           </div>
 
@@ -336,21 +336,21 @@
               <h4>Nellis Air Force Base</h4>
             <img src="projects/Nellis.jpg" alt="">
             <div class="over">
-              <p><strong>Las Vegas, NV</strong> - Nova Group</p>
+              <p><strong>Las Vegas, NV</strong> <br> Nova Group</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4>Travis Air Force Base</h4>
             <img src="projects/Travis.jpg" alt="">
             <div class="over">
-              <p><strong>Fairfield, CA</strong> - Nova Group</p>
+              <p><strong>Fairfield, CA</strong> <br> Nova Group</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4 title="Bayview Opera House, Ruth Williams Memorial Theatre">Bayview Opera House</h4>
             <img src="projects/Bayview.jpg" alt="">
             <div class="over">
-              <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+              <p><strong>San Francisco, CA</strong> <br> Woo Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
@@ -358,7 +358,7 @@
 
             <img src="projects/Genentech.jpg" alt="">
             <div class="over">
-            <p><strong>San Francisco, CA</strong> - Woo Electric</p>
+            <p><strong>San Francisco, CA</strong> <br> Woo Electric</p>
             </div>
           </div>
         </div>
