--- a/index.html
+++ b/index.html
@@ -307,14 +307,14 @@
             <h4>New Natural Resources</h4>
             <img src="projects/Resources.jpg" alt="">
             <div class="over">
-              <p><strong>Sacramento, CA</strong> <br> Redwood Electric Group & Turner Construction</p>
+              <p><strong>Sacramento, CA</strong> <br> Redwood Electric Group <br> & <br> Turner Construction</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4>SFMTA Phase 2</h4>
             <img src="projects/SFMTA-2.jpg" alt="">
             <div class="over">
-              <p><strong>Central Subway, Chinatown, San Francisco, CA</strong> <br> Fisk Electric</p>
+              <p><strong>Central Subway, Chinatown<br>San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
