--- a/index.html
+++ b/index.html
@@ -15,23 +15,14 @@
     <div class="covid">
       <div class="inner-cv nmob">
 
-        <div class=covp>
-                  <h4>Due to the ongoing Coronavirus pandemic,</h4>
-                <em>Laner Electric Supply has implemented the following restrictions in accordance with state guidelines.</em>
-                <ul>
-                  <li>Masks or face shields are required.</li>
-                  <li>Markers have been placed to encourage social distancing.</li>
-                  <li>Limited access to showroom with a maximum of three customers at a time. Office visits
-                  available with appointment only.</li>
-                  <li>Will Call pickup available.</li>
-                  <li>Orders can be placed over the phone, <br>via email and by texting our landline (510) 215-5100</li>
-                  <li>Modified Hours of Operation:</li>
-                  <li>Monday thru Friday: 7AM-3PM</li>
-                </ul>
-                We thank you for your cooperation and understanding during these uncertain times.
-                <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
-
-              </div>
+        <div class=covp id="covp-ajax">
+          <i class="fas fa-viruses fa-10x"></i>
+          <p><em>Laner Electric Supply has implemented various
+            restrictions in accordance with state guidelines,
+            such as mask requirments,social distancing markers, and changes to our hours of operation</em></p>
+          <button type="button" class="btn1" onclick="loadDoc3()"name="button" style="max-width: 200px;">Learn More</button>
+        </div>
+        <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
       </div>
     </div>
     <!-- First Page + Title -->
