--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <i class="fas fa-viruses fa-10x"></i>
           <p><em>Laner Electric Supply has implemented various
             restrictions in accordance with state guidelines,
-            such as mask requirments,social distancing markers, and changes to our hours of operation</em></p>
+            such as mask requirments, social distancing markers, and changes to our hours of operation.</em></p>
           <button type="button" class="btn1" onclick="loadDoc3()"name="button" style="max-width: 200px;">Learn More</button>
         </div>
         <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
