--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
       <div class="inner-cv nmob">
 
         <div class=covp id="covp-ajax">
-          <i class="fas fa-viruses fa-10x"></i>
-          <p><em>Laner Electric Supply has implemented various
-            restrictions in accordance with state guidelines,
-            such as mask requirments, social distancing markers, and changes to our hours of operation.</em></p>
-          <button type="button" class="btn1" onclick="loadDoc3()"name="button" style="max-width: 200px;">Learn More</button>
+
+
+              <div class="cont">
+                
+                <p><em><h4>Laner Electric Supply</h4> has implemented various
+                  restrictions in accordance with state guidelines,
+                  such as mask requirments, social distancing markers,
+                  and changes to our hours of operation.</em></p>
+              </div>
+
+
+              <button type="button" class="btn1" onclick="loadDoc3()"name="button" style="max-width: 200px;">Learn More</button>
+
+
+
+
+
         </div>
         <a href="#" class="x"><h6 style="text-decoration: underline; margin: 5px;">dismiss</h6></a>
       </div>
