changes to corp

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
               <div class="cont">
-                
+
                 <p><em><h4>Laner Electric Supply</h4> has implemented various
                   restrictions in accordance with state guidelines,
                   such as mask requirments, social distancing markers,
@@ -240,37 +240,43 @@
 
     <!-- Corporate resp + news sec -->
     <div class="row justify-content-center">
-      <div class="col-md-4 xtr">
-        <h3>Corporate Social Responsibility</h3>
+      <div class="col-md-4 xtr-cont">
+        <div class="xtr-col san-img">
+          <img src="imgs/san.jpg" alt="">
+        </div>
+        <div class="xtr-col resp">
+          <p>
+            <h3>Corporate Social Responsibility</h3>
 
-        <p id=resp>
-          <strong>Laner Electric Supply CEO
-          Sandra Escalante</strong>
-        currently sits on 5 different boards focused on
-        benefitting multiple aspects of our community:
-        <img src="imgs/san.jpg" alt="">
-        <br>
-        <br>
+            <strong>Laner Electric Supply CEO
+            Sandra Escalante</strong>
+          currently sits on 5 different boards focused on
+          benefitting multiple aspects of our community:
 
-        <em>University of CA - UC Procurement</em>
-        <br>
-        <br>
+          <br>
+          <br>
 
-        <em>CalTrans - Statewide</em>
-        <br>
-        <br>
+          <em>University of CA - UC Procurement</em>
+          <br>
+          <br>
 
-        <em>BART - Business Advisory Council</em>
-        <br>
-        <br>
-        <em>Department of General Services - Small Business Advisory Council</em>
-        <br>
-        <br>
-        <em>Richmond Workforce</em>
-        <br>
-        <br>
+          <em>CalTrans - Statewide</em>
+          <br>
+          <br>
 
-      </p>
+          <em>BART - Business Advisory Council</em>
+          <br>
+          <br>
+          <em>Department of General Services - Small Business Advisory Council</em>
+          <br>
+          <br>
+          <em>Richmond Workforce</em>
+          <br>
+          <br>
+
+        </p>
+        </div>
+
       </div>
       <div class="col-md-4 xtr">
         <h3>News & Media</h3>
