changes to map sec, grammar fixes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               Download
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="Capability Statement 2020.pdf"download="cs.pdf">Capabilities</a>
+              <a class="dropdown-item" href="Capability Statement 2020.pdf"download="cs.pdf">Capabilities Statement</a>
               <a class="dropdown-item disabled" href="#">Credit Card Auth Form</a>
               <a class="dropdown-item disabled" href="#">Credit Application</a>
             </div>
@@ -313,7 +313,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <h4>New Natural Resources</h4>
+            <h4>NNR Headquarters</h4>
             <img src="projects/Resources.jpg" alt="">
             <div class="over">
               <p><strong>Sacramento, CA</strong> <br> Redwood Electric Group <br> & <br> Turner Construction</p>
