hover bugfix(mobile)

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
-            <h4 title="Bayview Opera House, Ruth Williams Memorial Theatre">Bayview Opera House</h4>
+            <h4>Bayview Opera House</h4>
             <img src="projects/Bayview.jpg" alt="">
             <div class="over">
               <p><strong>San Francisco, CA</strong> <br> Woo Electric</p>
