changes to layout, removed sb8

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <br>
             <img src="projects/Genentech.jpg" alt="">
             <div class="over">
-              <p><strong>San Francisco, CA</strong> <br> Woo Electric</p>
+              <p><strong>San Francisco, CA</strong> <br> Woob Electric</p>
             </div>
           </div>
         </div>
