changes to classes interfeering w/ anims

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4 xtr-cont">
         <div class="xtr-col san-img">
-          <img src="imgs/san.jpg" alt="">
+          <img src="imgs/le002.jpg" alt="">
         </div>
         <div class="xtr-col resp">
 
@@ -284,7 +284,7 @@
           <div class="article">
 
             <h4>Caltrans Exceeds Small Business Goals</h4>
-            <img src="imgs/first.jpg" alt=""width=60px>
+            <img src="imgs/le001.jpg" alt=""width=60px>
             <p>Caltrans put more small, disadvantaged and disabled-veteran businesses to work in 2019 than ever before in its history.. <br>Spring 2020</p>
             <a href="https://dot.ca.gov/programs/public-affairs/mile-marker/spring-2020/disadvantaged-business">more..</a>
             <hr>
@@ -292,7 +292,7 @@
 
           <div class="article">
             <h4>Representing Diversity</h4>
-            <img src="imgs/second.jpg" alt=""width=60px>
+            <img src="imgs/le003.jpg" alt=""width=60px>
             <p>Caltrans is spotlighting Disadvantaged Business Enterprise: Laner Electric Supply Co., Inc. during Pride Month.. <br>6/16/2020</p>
             <a href="https://dot.ca.gov/-/media/dot-media/programs/civil-rights/documents/success-stories/lgbt-represnting-diversity-a11y.pdf">more..</a>
             <hr>
@@ -316,7 +316,7 @@
             <h4>NNR Headquarters</h4>
             <br>
             <img src="projects/Resources.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>Sacramento, CA</strong> <br> Redwood Electric Group <br> & <br> Turner Construction</p>
             </div>
           </div>
@@ -324,14 +324,15 @@
             <h4>SFMTA Phase 2</h4>
             <br>
             <img src="projects/SFMTA-2.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>Central Subway, Chinatown<br>San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
           <div data-aos="flip-left"class="col-sm-2 project-card">
             <h4>Transbay Transit Center</h4>
+            <br>
             <img src="projects/Transbay.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>San Francisco, CA</strong> <br> Fisk Electric</p>
             </div>
           </div>
@@ -339,7 +340,7 @@
             <h4>706 Mission Project</h4>
             <br>
             <img src="projects/Mission.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>San Francisco, CA</strong> <br> Cupertino Electric</p>
             </div>
           </div>
@@ -348,7 +349,7 @@
               <h4>Nellis Air Force Base</h4>
               <br>
             <img src="projects/Nellis.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>Las Vegas, NV</strong> <br> Nova Group</p>
             </div>
           </div>
@@ -356,7 +357,7 @@
             <h4>Travis Air Force Base</h4>
             <br>
             <img src="projects/Travis.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>Fairfield, CA</strong> <br> Nova Group</p>
             </div>
           </div>
@@ -364,7 +365,7 @@
             <h4>Bayview Opera House</h4>
             <br>
             <img src="projects/Bayview.jpg" alt="">
-            <div class="over">
+            <div class="overlay_fade">
               <p><strong>San Francisco, CA</strong> <br> Woo Electric</p>
             </div>
           </div>
@@ -372,8 +373,10 @@
             <h4>UCSF Genentech Hall</h4>
             <br>
             <img src="projects/Genentech.jpg" alt="">
-            <div class="over">
-              <p><strong>San Francisco, CA</strong> <br> Woob Electric</p>
+            <div class="overlay_fade">
+              <p><strong>San Francisco, CA</strong>
+                 <br>
+                 Woo Electric</p>
             </div>
           </div>
         </div>
