changes to est, about and footer bug fix

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
           <h3>Established in 1984,</h3>
           Laner Electric Supply Co., Inc. is a wholesale distributor of electrical construction materials, lighting products and tools to electrical and general contractors, property developers and managers, and industrial, institutional, and government entities - operating from a 16,000 sq. ft. sales, administrative, and warehouse facility..
           <br>
+          <img src="imgs/laner.png" alt="">
           <br>
 
         </div>
@@ -186,13 +187,15 @@
     </div>
     <div class="container-fluid big">
       <div class="row justify-content-center" id="dyn">
-        <div class="col-md-6">
+        <div class="col-md-4">
           Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.
+          <br>
           <br>
           Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.
+          <br>
           <br>
           Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.
         </div>
@@ -241,7 +244,7 @@
           <br>
 
           <em>University of CA - Business Advisory Council</em>
-          
+
           <br>
           <br>
 
