changes to about sec

--- a/index.html
+++ b/index.html
@@ -186,19 +186,49 @@
       <h1>ABOUT US</h1>
     </div>
     <div class="container-fluid big">
-      <div class="row justify-content-center" id="dyn">
-        <div class="col-md-4">
-          Full-line stocking distributor of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.
-          <br>
-          <br>
-          Long-term inside and outside sales and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.
+      <div class="new-card-row">
+        <div class="new-card">
+          <div class="new-card-col new-left">
+            <img src="imgs/ware.jpg" alt="">
+          </div>
+          <div class="new-card-col new-right">
+            <p><h6>Full-line stocking distributor</h6> of products across multiple categories including: conduit, fittings, panels, breakers, transformers, wire and cable, luminaires, lighting control systems, safety switches, motor controls and life safety devices.
+            </p>
+          </div>
         </div>
-        <div class="col-md-4">
-          Experienced personnel with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.
-          <br>
-          <br>
-          Long-term trading relationships with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.
+
+        <div class="new-card">
+          <div class="new-card-col new-left">
+            <p><h6>Long-term inside and outside sales</h6> and product specialists with specialized domain expertise in lighting, title 24 energy management, switchgear and power distribution.
+            </p>
+
+          </div>
+          <div class="new-card-col new-right">
+              <img src="imgs/sales.jpg" alt="">
+          </div>
         </div>
+        <div class="new-card">
+          <div class="new-card-col new-left">
+            <img src="imgs/tools.jpg" alt="">
+          </div>
+          <div class="new-card-col new-right">
+            <p><h6>Experienced personnel</h6> with modern computerized tools and best practices to manage project material and information flow from quote, to submittals, to order processing, to logistics, warehouse staging, delivery and invoicing.</p>
+
+          </div>
+        </div>
+
+        <div class="new-card">
+          <div class="new-card-col new-left">
+            <p><h6>Long-term trading relationships</h6> with top-tier manufacturers providing shared access to specialized project design and engineering personnel and other critical resources.</p>
+
+          </div>
+          <div class="new-card-col new-right">
+            <img src="imgs/trading.jpg" alt="">
+          </div>
+        </div>
+
+
+
       </div>
     <!-- Corporate resp + news sec -->
     <div class="row justify-content-center">
