--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="title">
         <a href="#"class="navbar-left"><img src="imgs/laner-white.png" id=logo0 alt=""> </a>
         <h1 data-aos="fade-left"id="laner_electric">Laner Electric Supply</h1>
-        <!--<img id="logo" src="imgs/Laner.png" alt="">-->
+        <h2 data-aos="fade-up" style="color: #F5D547;">Woman/Minority/LGBTQ Owned Small Business</h2>
         <h3 data-aos="fade-right"id ="slogan">SERVING QUALITY DRIVEN BUILDERS SINCE 1984</h3>
         <div class="down"><a href="#two"class="fas fa-angle-double-down fa-4x fic" aria-hidden="true"></a></div>
       </div>
